# memory-mesh

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPER_ASSESSMENT.md  Dockerfile  INTEGRATION.md  Makefile  PRODUCTION_READINESS.md  PROJECT_OVERVIEW.md  README.md  REMAINING_TASKS.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.do/: app.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 20240617_01_initial_schema.py  20240620_01_add_message_indexes.py  20251208_01_add_auth_and_conversations.py
backend/: pytest.ini
docs/monitoring/: alert_rules.yml  grafana-dashboard.json
frontend/: .env.example  Dockerfile  README.md  fix-newlines.sh  middleware.ts  next.config.ts  package-lock.json  package.json  vercel.json
frontend/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  page.tsx
frontend/app/components/: CodeBlock.tsx  Dashboard.tsx  Dashboard.tsx.backup  ErrorBoundary.tsx  LandingPage.tsx  NavigationTabs.tsx
frontend/app/components/auth/: AuthProvider.tsx  LoginForm.tsx  OAuthCallbackHandler.tsx  ProtectedRoute.tsx  RegisterForm.tsx
frontend/app/components/conversations/: ConversationList.tsx  ConversationView.tsx
frontend/app/components/dashboard/: AdminSection.tsx  ConfigurationPanel.tsx  MessageManagement.tsx  MessageRetrieval.tsx  RequestInspector.tsx  SearchSection.tsx
frontend/lib/: api.ts  auth.ts
scripts/: backup_database.sh
src/ai_memory_layer/: __init__.py  config.py  database.py  errors.py  limiter.py  logging.py  main.py  metrics.py  middleware.py  middleware_module.py  rate_limit.py  scheduler.py  security.py
src/ai_memory_layer/middleware/: __init__.py  tracing_middleware.py  versioning_middleware.py
src/ai_memory_layer/models/: memory.py  user.py
src/ai_memory_layer/repositories/: memory_repository.py
src/ai_memory_layer/routes/: __init__.py  admin.py  analytics.py  auth.py  conversations.py  memory.py  messages.py  retention.py  websocket.py
src/ai_memory_layer/schemas/: admin.py  analytics.py  auth.py  conversations.py  memory.py  messages.py  retention.py
src/ai_memory_layer/services/: advanced_retention.py  auth_service.py  cache.py  circuit_breaker.py  embedding.py  health.py  job_queue.py  message_service.py  monitoring.py  retention.py  retrieval.py
src/ai_memory_layer/utils/: sanitization.py
static/: index.html
tests/: __init__.py  conftest.py
tests/e2e/: test_workflow.py
tests/integration/: test_admin.py  test_api_messages.py  test_metrics.py  test_rate_limit.py  test_security.py
tests/unit/: test_scheduler.py
tests/unit/services/: test_embedding.py  test_importance.py  test_message_service.py  test_retention.py  test_retrieval.py
testsprite_tests/: testsprite-mcp-test-report.md  testsprite_backend_test_plan.json
(+2 files in other folders)
