[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_memory_layer"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[project]
name = "memorymesh"
version = "0.1.0"
description = "Backend service for conversation memory with semantic search."
authors = [
  { name = "Shubh Soni" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.29",
  "asyncpg>=0.29.0",
  "pgvector>=0.2.5",
  "psycopg[binary]>=3.1.18",
  "alembic>=1.13.1",
  "tenacity>=8.2.3",
  "python-dotenv>=1.0.1",
  "structlog>=24.2.0",
  "prometheus-client>=0.20.0",
  "aiosqlite>=0.20.0",
  "greenlet>=3.0.3",
  "sentence-transformers>=3.0.1",
  "slowapi>=0.1.9",
  "google-generativeai>=0.3.2",
  "redis>=5.0.0",
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "websockets>=13.0",
  "httpx>=0.27.0",
  "email-validator>=2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.1",
  "pytest-asyncio>=0.23.6",
  "httpx>=0.27.0",
  "ruff>=0.4.1",
  "mypy>=1.9.0"
]

[project.scripts]
memorymesh-api = "ai_memory_layer.main:run"
memorymesh-worker = "ai_memory_layer.worker:run"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
